--- a/lab_1/notebook1.ipynb
+++ b/lab_1/notebook1.ipynb
@@ -10,7 +10,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test\n",
       "======================================================================\n",
       "Теоретичне обґрунтування границь [1/g, 1]:\n",
       "Для кожного стовпця j: u₁ⱼ + u₂ⱼ + ⋯ + u_gⱼ = 1 і uₖⱼ ≥ 0.\n",
@@ -173,7 +172,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "\n",
+    "print (\"wheo2w;\")\n",
     "# Функція обчислення коефіцієнта розбиття PC для матриці U\n",
     "def partition_coefficient(U: np.ndarray) -> float:\n",
     "    if U.ndim != 2:\n",
