--- a/lab_1/notebook1.ipynb
+++ b/lab_1/notebook1.ipynb
@@ -172,7 +172,6 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "print (\"wheo2w;\")\n",
     "# Функція обчислення коефіцієнта розбиття PC для матриці U\n",
     "def partition_coefficient(U: np.ndarray) -> float:\n",
     "    if U.ndim != 2:\n",
@@ -296,7 +295,17 @@
     "\n",
     "Хід роботи:\n",
     "1. Реалізовати функцію для обчислення коефіцієнта розбиття\n",
-    "2."
+    "2. Забезпечити генерацію різних типів матриць:\n",
+    "  -U:випадкова (з нормалізацією по стовпцях) -рівномірна (Ukj = 1/g)\n",
+    "  -чітка (усі об’єкти належать одному кластеру)\n",
+    "3.Для різних значень кількості кластерів провести серії експериментів .\n",
+    "4. Для кожного випадку обчислено мінімальне, середнє та максимальне значення PC, а також перевірено відповідність теоретичним межам.\n",
+    "\n",
+    "Аналіз результатів:\n",
+    "Для рівномірної матриці U значення PC дорівнює 1/g що відповідає нижній межі. Для чіткої матриці U значення PC=1, що відповідає верхній межі. Для випадкових матриць U значення PC завжди лежать між цими межами, а середнє значення зменшується при зростанні кількості кластерів g. Таким чином, теоретичний результат PC∈[1/g,1] повністю підтверджується експериментами.\n",
+    "\n",
+    "Висновок:\n",
+    "У ході роботи було досліджено коефіцієнт розбиття PC, що використовується для оцінки якості кластеризації в нечітких методах. Теоретично доведено та експериментально підтверджено, що значення PC завжди належить інтервалу [1/g,1]. Проведені обчислення для випадкових матриць показали, що усі отримані значення дійсно лежать у вказаних межах, а середнє значення зменшується зі збільшенням кількості кластерів. Таким чином, коефіцієнт розбиття коректно відображає ступінь чіткості кластеризації: чим ближче він до 1, тим більш визначене розбиття, і навпаки – при значеннях, близьких до 1/g, кластеризація стає більш розмитою."
    ]
   }
  ],
