--- a/lab_1/notebook1.ipynb
+++ b/lab_1/notebook1.ipynb
@@ -285,7 +285,7 @@
    "id": "5c4fa361",
    "metadata": {},
    "source": [
-    "                                                   Практична робота No 1. Отримання навичок роботи в середовищi Python\n",
+    "                            #Практична робота No 1. Отримання навичок роботи в середовищi Python\n",
     "\n",
     "\n",
     "Варіант 12:\n",
