--- a/lab_1/Lab_notebook.ipynb
+++ b/lab_1/Lab_notebook.ipynb
@@ -328,7 +328,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IAD",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
