--- a/lab_2/Shanghai_code.ipynb
+++ b/lab_2/Shanghai_code.ipynb
@@ -427,7 +427,7 @@
    "id": "6c6ef304",
    "metadata": {},
    "source": [
-    "Щоб оцінити здатність моделі до узагальнення, розділимо набір даних на тренувальну та тестову вибірки, а також використаємо k‑fold крос-валідацію для більш надійної оцінки."
+    "Щоб оцінити здатність моделі до узагальнення, розділили набір даних на тренувальну та тестову вибірки, а також використаємо k‑fold крос-валідацію для більш надійної оцінки."
    ]
   },
   {
