--- a/lab_2/Shanghai_code.ipynb
+++ b/lab_2/Shanghai_code.ipynb
@@ -59,8 +59,7 @@
     "  Розглянути полiноми рiзного ступеня degree та рiзнi комбiнацiї гiперпараметрiв epsilon i C, наприклад: epsilon=0.1 i C=0.01; epsilon=0.1 i C=100.<br><br>\n",
     "• Настроїти гiперпараметри epsilon i C, використовуючи решітчастий пошук.<br><br>\n",
     "Початковi данi:<br>\n",
-    "(а) www.kaggle.com/bogof666/shanghai-car-license-plate-auction-price<br>\n",
-    "(б) avocado_prices.csv"
+    "(а) www.kaggle.com/bogof666/shanghai-car-license-plate-auction-price<br>\n"
    ]
   },
   {
