--- a/lab_2/avocado_prices_code.ipynb
+++ b/lab_2/avocado_prices_code.ipynb
@@ -39,9 +39,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10931c02",
+   "id": "bcfc9c13",
    "metadata": {},
-   "source": []
+   "source": [
+    "task1"
+   ]
   }
  ],
  "metadata": {
