--- a/lab_2/avocado_prices_code.ipynb
+++ b/lab_2/avocado_prices_code.ipynb
@@ -41,7 +41,9 @@
    "cell_type": "markdown",
    "id": "10931c02",
    "metadata": {},
-   "source": []
+   "source": [
+    "code only model"
+   ]
   }
  ],
  "metadata": {
