--- a/lab_2/avocado_prices_code.ipynb
+++ b/lab_2/avocado_prices_code.ipynb
@@ -26,9 +26,10 @@
     "для класифiкацiї та регресiї засобами бiблiотеки Scikit-Learn Python.\n",
     "\n",
     "<b>Хід роботи:</b>\n",
-    "1. Підготовка та представлення початкових даних графiчно.\n",
-    "2. Розбити данi на навчальний та валiдацiйний набори.\n",
-    "3. Побудувати на навчальному наборi даних моделi класифiкацiї або регресiї заданi згiдно з варiантом.\n",
+    "1. Підготувати дані.\n",
+    "2. Представити початкових даних графiчно.\n",
+    "3. Розбити данi на навчальний та валiдацiйний набори.\n",
+    ". Побудувати на навчальному наборi даних моделi класифiкацiї або регресiї заданi згiдно з варiантом.\n",
     "4. Представити моделi графiчно (наприклад вивести частину дерева рiшень, побудувати лiнiю регресiї тощо).\n",
     "5. Виконати прогнози на основi побудованих моделей.\n",
     "6. Для кожної з моделей оцiнити, чи має мiсце перенавчання.\n",
@@ -52,7 +53,8 @@
     "  Розглянути полiноми рiзного ступеня degree та рiзнi комбiнацiї гiперпараметрiв epsilon i C, наприклад: epsilon=0.1 i C=0.01; epsilon=0.1 i C=100.<br><br>\n",
     "• Настроїти гiперпараметри epsilon i C, використовуючи решітчастий пошук.<br><br>\n",
     "Початковi данi:<br>\n",
-    "(б) [avocado_prices.csv](https://www.kaggle.com/datasets/neuromusic/avocado-prices)"
+    "(б) [avocado_prices.csv](https://www.kaggle.com/datasets/neuromusic/avocado-prices)\n",
+    "для якогось коміта"
    ]
   },
   {
@@ -395,7 +397,12 @@
    "id": "58d50fac",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "# ------------------------------\n",
+    "# 2.1. Візуалізація окремих стовпців\n",
+    "# ------------------------------\n"
+   ]
   }
  ],
  "metadata": {
