--- a/lab_2/avocado_prices_code.ipynb
+++ b/lab_2/avocado_prices_code.ipynb
@@ -1008,6 +1008,99 @@
     "# Збереження моделі\n",
     "joblib.dump(best_model, 'best_svr_avocado.pkl')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "d6c889f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Запуск GridSearchCV на обучающем наборе (X_main)...\n",
+      "Fitting 5 folds for each of 12 candidates, totalling 60 fits\n",
+      "\n",
+      "==================================================\n",
+      "🔥 Найкращі параметри: {'svr__C': 100, 'svr__degree': 2, 'svr__epsilon': 0.1}\n",
+      "💎 Найкращий CV R²: 0.7264\n",
+      "==================================================\n",
+      "✅ ФІНАЛЬНА ОЦІНКА НА НЕЗАЛЕЖНОМУ ТЕСТОВОМУ НАБОРІ (Hold-out)\n",
+      "   MAE=0.1440\n",
+      "   RMSE=0.1931\n",
+      "   R²=0.7438\n",
+      "==================================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import SVR\n",
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "import joblib\n",
+    "import numpy as np\n",
+    "# Предполагается, что X_main, y_main, X_holdout, y_holdout и preprocessor определены\n",
+    "# X_main, y_main: данные для обучения и CV\n",
+    "# X_holdout, y_holdout: независимый тестовый набор для финальной оценки\n",
+    "\n",
+    "# ==============================================================================\n",
+    "# 1. Pipeline и GridSearch (Обучение на X_main)\n",
+    "# ==============================================================================\n",
+    "\n",
+    "# Пайплайн с моделью (без изменений)\n",
+    "svr_pipeline = Pipeline(steps=[\n",
+    "    ('preprocessor', preprocessor), # Используем ваш ColumnTransformer\n",
+    "    ('svr', SVR(kernel='poly', gamma='scale'))\n",
+    "])\n",
+    "\n",
+    "# Grid для поиска (без изменений)\n",
+    "param_grid = {\n",
+    "    'svr__degree': [2, 3],\n",
+    "    'svr__epsilon': [0.01, 0.1],\n",
+    "    'svr__C': [0.01, 1, 100]\n",
+    "}\n",
+    "\n",
+    "# GridSearch с 5-fold CV\n",
+    "# Обучаем ТОЛЬКО на X_main и y_main\n",
+    "grid_search = GridSearchCV(\n",
+    "    svr_pipeline, param_grid, cv=5, scoring='r2', n_jobs=-1, verbose=1\n",
+    ")\n",
+    "print(\"Запуск GridSearchCV на обучающем наборе (X_main)...\")\n",
+    "grid_search.fit(X_main, y_main) # <--- ИСПОЛЬЗУЕМ X_main, y_main!\n",
+    "\n",
+    "# ==============================================================================\n",
+    "# 2. Оценка Результатов\n",
+    "# ==============================================================================\n",
+    "\n",
+    "# Лучшая модель\n",
+    "best_model = grid_search.best_estimator_\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(f\"🔥 Найкращі параметри: {grid_search.best_params_}\")\n",
+    "print(f\"💎 Найкращий CV R²: {grid_search.best_score_:.4f}\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "\n",
+    "# ФИНАЛЬНАЯ, ЧЕСТНАЯ ОЦЕНКА: Прогноз на независимом X_holdout\n",
+    "y_pred_holdout = best_model.predict(X_holdout)\n",
+    "\n",
+    "mae_holdout = mean_absolute_error(y_holdout, y_pred_holdout)\n",
+    "rmse_holdout = np.sqrt(mean_squared_error(y_holdout, y_pred_holdout))\n",
+    "r2_holdout = r2_score(y_holdout, y_pred_holdout)\n",
+    "\n",
+    "print(\"✅ ФІНАЛЬНА ОЦІНКА НА НЕЗАЛЕЖНОМУ ТЕСТОВОМУ НАБОРІ (Hold-out)\")\n",
+    "print(f\"   MAE={mae_holdout:.4f}\")\n",
+    "print(f\"   RMSE={rmse_holdout:.4f}\")\n",
+    "print(f\"   R²={r2_holdout:.4f}\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "# ==============================================================================\n",
+    "# 3. Сохранение\n",
+    "# ==============================================================================\n",
+    "# joblib.dump(best_model, 'best_svr_avocado.pkl')\n",
+    "# print(\"Модель сохранена.\")"
+   ]
   }
  ],
  "metadata": {
