--- a/lab_2/avocado_prices_code.ipynb
+++ b/lab_2/avocado_prices_code.ipynb
@@ -1636,8 +1636,7 @@
             "Найкраща комбінація гіперпараметрів у більшості фолдів — \n",
             "<b>C = 10, degree = 3, epsilon = 0.1, gamma = 'scale'</b>, що відповідає класичному компромісу між \n",
             "гнучкістю поліноміального ядра та регуляризацією.<br><br>\n",
-            "Модель демонструє збалансовану поведінку: значення MAE і RMSE близькі, що вказує на відсутність \n",
-            "великих викидів або значних похибок. \n",
+            "Модель демонструє збалансовану поведінку: хоча boxplot показує наявність викидів, їхній вплив на MAE та RMSE виявився помірним, що дозволяє моделі ефективно прогнозувати цільову змінну. \n",
             "Розкид між фолдами не перевищує 2–3%, що підтверджує стабільність навіть при зміні підмножин даних.<br><br>\n",
             "\n",
             "<b> Висновок:</b><br><br>\n",
