pycharm test commit

--- a/lab_2/Shanghai_code.ipynb
+++ b/lab_2/Shanghai_code.ipynb
@@ -251,7 +251,7 @@
     "# 1.2. Візуалізація окремих стовпців\n",
     "# ------------------------------\n",
     "# Встановити стиль seaborn для послідовних і чистих графіків\n",
-    "sns.set(style=\"whitegrid\", rc={'figure.dpi': 100, 'figure.figsize': (12, 4)})\n",
+    "sns.set_theme(style=\"whitegrid\", rc={'figure.dpi': 100, 'figure.figsize': (12, 4)})\n",
     "\n",
     "# Побудувати графік для кожного чисельного стовпця по часу\n",
     "numeric_cols = [col for col in df.columns if col != 'Date']\n",
@@ -630,9 +630,9 @@
    ],
    "source": [
     "# Кореляції\n",
-    "corrs = X.join(y).corr()[TARGET].drop(TARGET).abs().sort_values(ascending=False)\n",
-    "print(\"Топ кореляцій (за модулем) з таргетом:\\n\", corrs.head(10))\n",
-    "print(\"\\nОзнаки з abs(corr) > 0.95:\\n\", corrs[corrs>0.95])\n",
+    "correlation = X.join(y).corr()[TARGET].drop(TARGET).abs().sort_values(ascending=False)\n",
+    "print(\"Топ кореляцій (за модулем) з таргетом:\\n\", correlation.head(10))\n",
+    "print(\"\\nОзнаки з abs(corr) > 0.95:\\n\", correlation[correlation>0.95])\n",
     "\n",
     "# Перевірка, наскільки 'lowest price' фізично збігається з таргетом\n",
     "diff = df['avg price'] - df['lowest price']\n",
