--- a/lab_2/avocado_prices_code.ipynb
+++ b/lab_2/avocado_prices_code.ipynb
@@ -1060,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "1bfd2742",
    "metadata": {},
    "outputs": [
@@ -1295,6 +1295,7 @@
     "import pandas as pd\n",
     "from sklearn.svm import SVR\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error, r2_score\n",
+    "from sklearn.experimental import enable_halving_search_cv\n",
     "from sklearn.model_selection import HalvingGridSearchCV\n",
     "\n",
     "# ==============================================================================\n",
@@ -1649,7 +1650,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1663,7 +1664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
