--- a/lab_3/Shanghai_code_NN.ipynb
+++ b/lab_3/Shanghai_code_NN.ipynb
@@ -1651,7 +1651,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "IAD",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
