add conclusion avocado

--- a/lab_3/avocado_prices_code_NN.ipynb
+++ b/lab_3/avocado_prices_code_NN.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "source": [
     "<div align=\"center\">\n",
-    "<h1 style=\"color:#1565c0; font-size:2.8em; font-weight:bold; margin-bottom:0.2em; margin-top:0.5em;\">Практична робота №2</h1>\n",
+    "<h1 style=\"color:#1565c0; font-size:2.8em; font-weight:bold; margin-bottom:0.2em; margin-top:0.5em;\">Практична робота №3</h1>\n",
     "<h3 style=\"color:#1976d2; margin-top:0; font-weight:normal;\">Побудова та оцiнювання якостi\n",
-    "моделей класифiкацiї та регресiї засобами бiблiотеки <b>Scikit-Learn Python</b></h3>\n",
+    "нейроних мереж для задачі регресiї засобами бiблiотеки <b>Scikit-Learn Python</b></h3>\n",
     "<br>\n",
     "<br>\n",
     "<b>Варіант 12</b><br>\n",
@@ -18,21 +18,20 @@
     "Романов Фелікс, КА-33\n",
     "</div>\n",
     "\n",
-    "<b>Мета:</b> Метою роботи є побудова та оцiнювання якостi моделей:\n",
-    "- дерев рiшень,\n",
-    "- опорних векторiв,\n",
-    "- логiстичної регресiї,\n",
-    "- наївної баєсiвської моделi\n",
-    "для класифiкацiї та регресiї засобами бiблiотеки Scikit-Learn Python.\n",
+    "<b>Мета:</b> Метою роботи є побудова та оцiнювання якостi моделей\n",
+    "MLPRegressor засобами бiблiотеки Scikit-Learn Python.\n",
     "\n",
     "<b>Хід роботи:</b>\n",
-    "1. Підготувати дані.\n",
-    "2. Представити початкових даних графiчно.\n",
-    "3. Розбити данi на навчальний та валiдацiйний набори.\n",
-    "4. Побудувати на навчальному наборi даних моделi класифiкацiї або регресiї заданi згiдно з варiантом.\n",
+    "1. Представити початковi данi графiчно.\n",
+    "2. Розбити данi на навчальний та валiдацiйний набори.\n",
+    "\n",
+    "3. Побудувати на навчальному наборi даних моделi класифiкацiї або регресiї заданi згiдно з варiантом.\n",
+    "\n",
     "4. Представити моделi графiчно (наприклад вивести частину дерева рiшень, побудувати лiнiю регресiї тощо).\n",
+    "\n",
     "5. Виконати прогнози на основi побудованих моделей.\n",
     "6. Для кожної з моделей оцiнити, чи має мiсце перенавчання.\n",
+    "\n",
     "7. В задачах регресiї розрахувати для кожної моделi наступнi критерiї якостi, окремо на навчальнiй та валiдацiйнiй множинах:\n",
     "\n",
     "    • коефiцiєнт детермiнацiї R2,\n",
@@ -40,6 +39,7 @@
     "    • помилки RMSE, MAE та MAPE.\n",
     "\n",
     "8. Спробувати виконати решiтчастий пошук (grid search) для пiдбору гiперпараметрiв моделей.\n",
+    "\n",
     "9. Зробити висновки про якiсть роботи моделей на дослiджених даних. На\n",
     "основi критерiїв якостi спробувати обрати найкращу модель.\n",
     "10. Навчити моделi на пiдмножинах навчальних даних. Оцiнити, наскiльки\n",
@@ -49,7 +49,6 @@
     "\n",
     "<b>Завдання:</b><br>\n",
     "Побудувати моделi регресiї на основi нейронної мережі, визначити, чи достатньо буде одношарової моделі для опису даних. Реалізувати динамічне додавання нейронів до скритого шару. Перевірити, скільки нейронів в одношаровій моделі буде достатньо для задовільного розв'язання задачі.<br><br>\n",
-    "\n",
     "Початковi данi:<br>\n",
     "(б) [avocado_prices.csv](https://www.kaggle.com/datasets/neuromusic/avocado-prices)"
    ]
@@ -2894,6 +2893,69 @@
     "print(f\"Графік 4: Оцінка фінальної моделі на holdout даних\")\n",
     "print(f\"Графік 5: Топ-5 найкращих архітектур\")\n",
     "print(\"=\"*80)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc867dad",
+   "metadata": {},
+   "source": [
+    "# Висновок\n",
+    "\n",
+    "Під час виконання даної роботи було досягнуто поставленої мети: **успішно побудовано, протестовано та порівняно одношарові та багатошарові нейронні мережі (`MLPRegressor`)** для вирішення задачі регресії.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Експеримент 1: Одношарова модель\n",
+    "\n",
+    "### Мета\n",
+    "Дослідити ефективність простої нейронної мережі з одним прихованим шаром та визначити оптимальну кількість нейронів.\n",
+    "\n",
+    "### Методика\n",
+    "Проведено динамічне тестування моделі, змінюючи кількість нейронів у прихованому шарі в діапазоні від 5 до 500. Якість оцінювалась за допомогою крос-валідації.\n",
+    "\n",
+    "### Результати\n",
+    "- Спостерігається чітка позитивна динаміка: **збільшення кількості нейронів послідовно покращує всі метрики якості**.\n",
+    "- **Найкращий результат (Test R² = 0.8732)** досягнуто при максимальній конфігурації у **500 нейронів**.\n",
+    "- \"Точка насичення\" (де покращення стає менш вираженим, < 0.01 R²) спостерігається приблизно після 300 нейронів.\n",
+    "- Рівень перенавчання (Overfitting) залишався на контрольованому рівні, сягнувши 4.54% для найкращої моделі.\n",
+    "- Фінальна модель (500 нейронів) показала **відмінну стабільність** на незалежному holdout-наборі з **R² = 0.8816**.\n",
+    "\n",
+    "> **Висновок:** Для досягнення високої точності одношаровій моделі потрібна значна \"ширина\" (велика кількість нейронів). Модель (500,) є стабільною та показує високу узагальнюючу здатність, але є відносно повільною (11-13с на навчання).\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Експеримент 2: Багатошарова модель\n",
+    "\n",
+    "### Мета\n",
+    "Дослідити, чи може глибша (багатошарова) архітектура перевершити широку одношарову модель за точністю, швидкістю або ефективністю.\n",
+    "\n",
+    "### Методика\n",
+    "Проведено тестування 2-, 3- та 4-шарових архітектур з різними конфігураціями нейронів, включно з \"пірамідальними\" (напр., `128-64-32`) та \"рівномірними\" (напр., `80-80-80-80`). Результати порівнювалися з найкращою одношаровою моделлю (`500`).\n",
+    "\n",
+    "### Результати\n",
+    "- **Найвища точність (Test R² = 0.8781)** була досягнута 4-шаровою моделлю `128-96-64-32`. Однак ця модель також показала найвищий рівень перенавчання (7.39%).\n",
+    "- **Одношарова модель (500,)** посіла друге місце за точністю (Test R² = 0.8746), але була найповільнішою (13.55s).\n",
+    "- **Оптимальний баланс** між точністю (Test R² = 0.8650), перенавчанням (5.25%) та швидкістю (5.48s) продемонструвала 2-шарова архітектура `100-50`.\n",
+    "- Фінальна модель `100-50`, навчена на повних даних, показала на holdout-наборі **R² = 0.8808**, що практично ідентично результату одношарової моделі (0.8816).\n",
+    "\n",
+    "> **Висновок:** Глибші архітектури здатні досягти такої ж (або навіть трохи вищої) точності, як і широка одношарова мережа. Проте 2-шарова модель (`100-50`) виявилася **значно ефективнішою**, забезпечивши майже ідентичну якість узагальнення при **більш ніж удвічі меншому часі навчання**.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Загальний висновок\n",
+    "\n",
+    "Найкращою моделлю, обраною за критеріями **оптимального балансу між точністю, швидкістю навчання та здатністю до узагальнення**, є:\n",
+    "\n",
+    "> **Двошарова нейронна мережа з архітектурою (100, 50)**\n",
+    "\n",
+    "**Переваги цієї моделі:**\n",
+    "- **Висока точність:** R² на незалежному holdout-наборі (0.8808) практично не поступається найкращій одношаровій моделі (0.8816).\n",
+    "- **Висока ефективність:** Модель навчається значно швидше (5.48s проти 13.55s у порівняльному тесті), ніж широка одношарова модель.\n",
+    "- **Стабільність:** Демонструє відмінну узгодженість між результатами крос-валідації (0.8650) та holdout (0.8808), що свідчить про надійність моделі.\n",
+    "\n",
+    "**Висновкове твердження:**\n",
+    "> Для даної задачі регресії **двошарова архітектура (100, 50) є найбільш прагматичним та ефективним вибором**. Вона доводить, що додавання \"глибини\" (другого шару) дозволяє досягти тієї ж якості прогнозу, що і значне розширення \"ширини\" (500 нейронів в одному шарі), але з набагато меншими обчислювальними витратами."
    ]
   }
  ],
