iris (проміжні результати)

--- a/lab_4/load_iris_code.ipynb
+++ b/lab_4/load_iris_code.ipynb
@@ -62,17 +62,383 @@
     "    1.  `sklearn.datasets.make_moons`\n",
     "    2.  `sklearn.datasets.load_iris`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "77a2a0e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "КРОК 1: ЗАВАНТАЖЕННЯ ТА ПЕРВИННИЙ АНАЛІЗ ДАНИХ\n",
+      "======================================================================\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name '__file__' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 25\u001b[39m\n\u001b[32m     22\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m=\u001b[39m\u001b[33m\"\u001b[39m*\u001b[32m70\u001b[39m)\n\u001b[32m     24\u001b[39m \u001b[38;5;66;03m# Визначення шляху до файлу\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m25\u001b[39m script_directory = Path(\u001b[34;43m__file__\u001b[39;49m).parent\n\u001b[32m     26\u001b[39m iris_filepath = script_directory / \u001b[33m\"\u001b[39m\u001b[33mdata\u001b[39m\u001b[33m\"\u001b[39m / \u001b[33m\"\u001b[39m\u001b[33miris_dataset.csv\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m# Завантаження даних\u001b[39;00m\n",
+      "\u001b[31mNameError\u001b[39m: name '__file__' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from pathlib import Path\n",
+    "from sklearn.decomposition import PCA\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "# Налаштування стилю графіків\n",
+    "plt.style.use('seaborn-v0_8-darkgrid')\n",
+    "sns.set_palette(\"husl\")\n",
+    "\n",
+    "\n",
+    "# ============================================================================\n",
+    "# КРОК 1: ЗАВАНТАЖЕННЯ ТА ПЕРВИННИЙ АНАЛІЗ ДАНИХ\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"КРОК 1: ЗАВАНТАЖЕННЯ ТА ПЕРВИННИЙ АНАЛІЗ ДАНИХ\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# Визначення шляху до файлу\n",
+    "script_directory = Path(__file__).parent\n",
+    "iris_filepath = script_directory / \"data\" / \"iris_dataset.csv\"\n",
+    "\n",
+    "# Завантаження даних\n",
+    "print(f\"\\n📁 Завантаження даних з: {iris_filepath}\")\n",
+    "df = pd.read_csv(iris_filepath)\n",
+    "\n",
+    "print(\"\\n✅ Дані успішно завантажено!\")\n",
+    "\n",
+    "# 1.1 Базова інформація про датасет\n",
+    "print(\"\\n\" + \"-\"*70)\n",
+    "print(\"1.1 БАЗОВА ІНФОРМАЦІЯ ПРО ДАТАСЕТ\")\n",
+    "print(\"-\"*70)\n",
+    "\n",
+    "print(f\"\\n📊 Розмірність датасету: {df.shape}\")\n",
+    "print(f\"   - Кількість зразків: {df.shape[0]}\")\n",
+    "print(f\"   - Кількість ознак: {df.shape[1] - 1} (без target)\")\n",
+    "\n",
+    "print(\"\\n📋 Перші 5 рядків:\")\n",
+    "print(df.head())\n",
+    "\n",
+    "print(\"\\n📋 Останні 5 рядків:\")\n",
+    "print(df.tail())\n",
+    "\n",
+    "print(\"\\n🏷️ Типи даних:\")\n",
+    "print(df.dtypes)\n",
+    "\n",
+    "print(\"\\n🔢 Інформація про датасет:\")\n",
+    "df.info()\n",
+    "\n",
+    "# 1.2 Статистичні характеристики\n",
+    "print(\"\\n\" + \"-\"*70)\n",
+    "print(\"1.2 СТАТИСТИЧНІ ХАРАКТЕРИСТИКИ\")\n",
+    "print(\"-\"*70)\n",
+    "\n",
+    "print(\"\\n📈 Описова статистика для всіх ознак:\")\n",
+    "print(df.describe())\n",
+    "\n",
+    "print(\"\\n📊 Статистика по цільовій змінній (target):\")\n",
+    "print(df['target'].value_counts().sort_index())\n",
+    "\n",
+    "target_names = ['Setosa (0)', 'Versicolor (1)', 'Virginica (2)']\n",
+    "print(\"\\nРозподіл класів:\")\n",
+    "for i, name in enumerate(target_names):\n",
+    "    count = (df['target'] == i).sum()\n",
+    "    percentage = (count / len(df)) * 100\n",
+    "    print(f\"  {name}: {count} зразків ({percentage:.1f}%)\")\n",
+    "\n",
+    "# 1.3 Перевірка на пропущені значення\n",
+    "print(\"\\n\" + \"-\"*70)\n",
+    "print(\"1.3 ПЕРЕВІРКА НА ПРОПУЩЕНІ ЗНАЧЕННЯ\")\n",
+    "print(\"-\"*70)\n",
+    "\n",
+    "missing_values = df.isnull().sum()\n",
+    "print(\"\\n🔍 Кількість пропущених значень по стовпцях:\")\n",
+    "print(missing_values)\n",
+    "\n",
+    "if missing_values.sum() == 0:\n",
+    "    print(\"\\n✅ Пропущені значення відсутні!\")\n",
+    "else:\n",
+    "    print(f\"\\n⚠️ Загальна кількість пропущених значень: {missing_values.sum()}\")\n",
+    "\n",
+    "# 1.4 Кореляційна матриця\n",
+    "print(\"\\n\" + \"-\"*70)\n",
+    "print(\"1.4 КОРЕЛЯЦІЙНА МАТРИЦЯ МІЖ ОЗНАКАМИ\")\n",
+    "print(\"-\"*70)\n",
+    "\n",
+    "# Відокремлюємо ознаки (без target)\n",
+    "feature_columns = [col for col in df.columns if col != 'target']\n",
+    "X = df[feature_columns].values\n",
+    "y = df['target'].values\n",
+    "\n",
+    "correlation_matrix = df[feature_columns].corr()\n",
+    "print(\"\\n📊 Кореляція між ознаками:\")\n",
+    "print(correlation_matrix)\n",
+    "\n",
+    "# ============================================================================\n",
+    "# КРОК 2: ВІЗУАЛІЗАЦІЯ ПОЧАТКОВИХ ДАНИХ\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"КРОК 2: ВІЗУАЛІЗАЦІЯ ПОЧАТКОВИХ ДАНИХ\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# 2.1 Кореляційна матриця (heatmap)\n",
+    "print(\"\\n📊 Створення теплової карти кореляцій...\")\n",
+    "plt.figure(figsize=(10, 8))\n",
+    "sns.heatmap(correlation_matrix, annot=True, fmt='.3f', cmap='coolwarm', \n",
+    "            square=True, linewidths=0.5, cbar_kws={\"shrink\": 0.8})\n",
+    "plt.title('Кореляційна матриця ознак датасету Iris', fontsize=14, fontweight='bold')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(script_directory / 'iris_01_correlation_matrix.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "print(\"✅ Збережено: iris_01_correlation_matrix.png\")\n",
+    "\n",
+    "# 2.2 Box plots для кожної ознаки\n",
+    "print(\"\\n📊 Створення box plots для кожної ознаки...\")\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
+    "axes = axes.ravel()\n",
+    "\n",
+    "for idx, col in enumerate(feature_columns):\n",
+    "    axes[idx].boxplot([df[df['target'] == i][col] for i in range(3)],\n",
+    "                      labels=target_names)\n",
+    "    axes[idx].set_title(f'Box Plot: {col}', fontsize=12, fontweight='bold')\n",
+    "    axes[idx].set_ylabel('Значення')\n",
+    "    axes[idx].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.suptitle('Розподіл ознак по класах (Box Plots)', fontsize=14, fontweight='bold')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(script_directory / 'iris_02_boxplots.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "print(\"✅ Збережено: iris_02_boxplots.png\")\n",
+    "\n",
+    "# 2.3 Pair plot (матриця діаграм розсіювання)\n",
+    "print(\"\\n📊 Створення pair plot (може зайняти кілька секунд)...\")\n",
+    "pairplot_df = df.copy()\n",
+    "pairplot_df['species'] = pairplot_df['target'].map({0: 'Setosa', 1: 'Versicolor', 2: 'Virginica'})\n",
+    "\n",
+    "g = sns.pairplot(pairplot_df, hue='species', vars=feature_columns,\n",
+    "                 diag_kind='kde', plot_kws={'alpha': 0.6, 's': 50, 'edgecolor': 'k'},\n",
+    "                 height=2.5)\n",
+    "g.fig.suptitle('Pair Plot: Всі пари ознак датасету Iris', y=1.02, fontsize=14, fontweight='bold')\n",
+    "plt.savefig(script_directory / 'iris_03_pairplot.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "print(\"✅ Збережено: iris_03_pairplot.png\")\n",
+    "\n",
+    "# 2.4 Scatter plots для кожної пари ознак з реальними мітками\n",
+    "print(\"\\n📊 Створення scatter plots для всіх пар ознак...\")\n",
+    "from itertools import combinations\n",
+    "\n",
+    "feature_pairs = list(combinations(range(len(feature_columns)), 2))\n",
+    "n_pairs = len(feature_pairs)\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
+    "axes = axes.ravel()\n",
+    "\n",
+    "colors = ['red', 'green', 'blue']\n",
+    "markers = ['o', 's', '^']\n",
+    "\n",
+    "for idx, (i, j) in enumerate(feature_pairs):\n",
+    "    for class_idx in range(3):\n",
+    "        mask = y == class_idx\n",
+    "        axes[idx].scatter(X[mask, i], X[mask, j], \n",
+    "                         c=colors[class_idx], \n",
+    "                         marker=markers[class_idx],\n",
+    "                         label=target_names[class_idx],\n",
+    "                         alpha=0.6, \n",
+    "                         edgecolors='k',\n",
+    "                         s=50)\n",
+    "    \n",
+    "    axes[idx].set_xlabel(feature_columns[i], fontsize=10)\n",
+    "    axes[idx].set_ylabel(feature_columns[j], fontsize=10)\n",
+    "    axes[idx].set_title(f'{feature_columns[i]} vs {feature_columns[j]}', \n",
+    "                       fontsize=11, fontweight='bold')\n",
+    "    axes[idx].legend(fontsize=8)\n",
+    "    axes[idx].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.suptitle('Scatter Plots: Всі пари ознак з реальними класами', \n",
+    "             fontsize=14, fontweight='bold')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(script_directory / 'iris_04_scatter_pairs.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "print(\"✅ Збережено: iris_04_scatter_pairs.png\")\n",
+    "\n",
+    "# 2.5 PCA для зменшення розмірності та візуалізації\n",
+    "print(\"\\n📊 Виконання PCA для візуалізації в 2D...\")\n",
+    "\n",
+    "# Стандартизація даних (важливо для PCA!)\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
+    "# PCA з 2 компонентами\n",
+    "pca_2d = PCA(n_components=2)\n",
+    "X_pca_2d = pca_2d.fit_transform(X_scaled)\n",
+    "\n",
+    "print(f\"\\n📉 Пояснена дисперсія (2 компоненти):\")\n",
+    "print(f\"   - PC1: {pca_2d.explained_variance_ratio_[0]:.4f} ({pca_2d.explained_variance_ratio_[0]*100:.2f}%)\")\n",
+    "print(f\"   - PC2: {pca_2d.explained_variance_ratio_[1]:.4f} ({pca_2d.explained_variance_ratio_[1]*100:.2f}%)\")\n",
+    "print(f\"   - Загалом: {sum(pca_2d.explained_variance_ratio_):.4f} ({sum(pca_2d.explained_variance_ratio_)*100:.2f}%)\")\n",
+    "\n",
+    "# Візуалізація PCA 2D\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "for class_idx in range(3):\n",
+    "    mask = y == class_idx\n",
+    "    plt.scatter(X_pca_2d[mask, 0], X_pca_2d[mask, 1],\n",
+    "               c=colors[class_idx],\n",
+    "               marker=markers[class_idx],\n",
+    "               label=target_names[class_idx],\n",
+    "               alpha=0.6,\n",
+    "               edgecolors='k',\n",
+    "               s=100)\n",
+    "\n",
+    "plt.xlabel(f'Перша головна компонента (PC1) - {pca_2d.explained_variance_ratio_[0]*100:.2f}%', \n",
+    "           fontsize=12)\n",
+    "plt.ylabel(f'Друга головна компонента (PC2) - {pca_2d.explained_variance_ratio_[1]*100:.2f}%', \n",
+    "           fontsize=12)\n",
+    "plt.title('PCA: Датасет Iris у 2D просторі (з реальними класами)', \n",
+    "          fontsize=14, fontweight='bold')\n",
+    "plt.legend(fontsize=10)\n",
+    "plt.grid(True, alpha=0.3)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(script_directory / 'iris_05_pca_2d.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "print(\"✅ Збережено: iris_05_pca_2d.png\")\n",
+    "\n",
+    "# 2.6 PCA з 3 компонентами для 3D візуалізації\n",
+    "print(\"\\n📊 Виконання PCA для візуалізації в 3D...\")\n",
+    "\n",
+    "pca_3d = PCA(n_components=3)\n",
+    "X_pca_3d = pca_3d.fit_transform(X_scaled)\n",
+    "\n",
+    "print(f\"\\n📉 Пояснена дисперсія (3 компоненти):\")\n",
+    "for i in range(3):\n",
+    "    print(f\"   - PC{i+1}: {pca_3d.explained_variance_ratio_[i]:.4f} ({pca_3d.explained_variance_ratio_[i]*100:.2f}%)\")\n",
+    "print(f\"   - Загалом: {sum(pca_3d.explained_variance_ratio_):.4f} ({sum(pca_3d.explained_variance_ratio_)*100:.2f}%)\")\n",
+    "\n",
+    "# 3D Scatter Plot\n",
+    "fig = plt.figure(figsize=(12, 9))\n",
+    "ax = fig.add_subplot(111, projection='3d')\n",
+    "\n",
+    "for class_idx in range(3):\n",
+    "    mask = y == class_idx\n",
+    "    ax.scatter(X_pca_3d[mask, 0], X_pca_3d[mask, 1], X_pca_3d[mask, 2],\n",
+    "              c=colors[class_idx],\n",
+    "              marker=markers[class_idx],\n",
+    "              label=target_names[class_idx],\n",
+    "              alpha=0.6,\n",
+    "              edgecolors='k',\n",
+    "              s=50)\n",
+    "\n",
+    "ax.set_xlabel(f'PC1 ({pca_3d.explained_variance_ratio_[0]*100:.1f}%)', fontsize=11)\n",
+    "ax.set_ylabel(f'PC2 ({pca_3d.explained_variance_ratio_[1]*100:.1f}%)', fontsize=11)\n",
+    "ax.set_zlabel(f'PC3 ({pca_3d.explained_variance_ratio_[2]*100:.1f}%)', fontsize=11)\n",
+    "ax.set_title('PCA: Датасет Iris у 3D просторі (з реальними класами)', \n",
+    "            fontsize=14, fontweight='bold')\n",
+    "ax.legend(fontsize=10)\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(script_directory / 'iris_06_pca_3d.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "print(\"✅ Збережено: iris_06_pca_3d.png\")\n",
+    "\n",
+    "# 2.7 Розподіл кожної ознаки (гістограми)\n",
+    "print(\"\\n📊 Створення гістограм розподілу ознак...\")\n",
+    "\n",
+    "fig, axes = plt.subplots(2, 2, figsize=(14, 10))\n",
+    "axes = axes.ravel()\n",
+    "\n",
+    "for idx, col in enumerate(feature_columns):\n",
+    "    for class_idx in range(3):\n",
+    "        mask = y == class_idx\n",
+    "        axes[idx].hist(X[mask, idx], bins=20, alpha=0.5, \n",
+    "                      label=target_names[class_idx], \n",
+    "                      color=colors[class_idx],\n",
+    "                      edgecolor='black')\n",
+    "    \n",
+    "    axes[idx].set_xlabel(col, fontsize=10)\n",
+    "    axes[idx].set_ylabel('Частота', fontsize=10)\n",
+    "    axes[idx].set_title(f'Розподіл: {col}', fontsize=11, fontweight='bold')\n",
+    "    axes[idx].legend(fontsize=8)\n",
+    "    axes[idx].grid(True, alpha=0.3)\n",
+    "\n",
+    "plt.suptitle('Гістограми розподілу ознак по класах', fontsize=14, fontweight='bold')\n",
+    "plt.tight_layout()\n",
+    "plt.savefig(script_directory / 'iris_07_histograms.png', dpi=300, bbox_inches='tight')\n",
+    "plt.show()\n",
+    "print(\"✅ Збережено: iris_07_histograms.png\")\n",
+    "\n",
+    "# ============================================================================\n",
+    "# ЗБЕРЕЖЕННЯ ОБРОБЛЕНИХ ДАНИХ\n",
+    "# ============================================================================\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"ЗБЕРЕЖЕННЯ ОБРОБЛЕНИХ ДАНИХ\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# Збереження стандартизованих даних для подальшого використання\n",
+    "scaled_df = pd.DataFrame(X_scaled, columns=feature_columns)\n",
+    "scaled_df['target'] = y\n",
+    "scaled_filepath = script_directory / \"data\" / \"iris_scaled.csv\"\n",
+    "scaled_df.to_csv(scaled_filepath, index=False)\n",
+    "print(f\"\\n💾 Стандартизовані дані збережено: {scaled_filepath}\")\n",
+    "\n",
+    "# Збереження PCA даних\n",
+    "pca_df = pd.DataFrame(X_pca_2d, columns=['PC1', 'PC2'])\n",
+    "pca_df['target'] = y\n",
+    "pca_filepath = script_directory / \"data\" / \"iris_pca.csv\"\n",
+    "pca_df.to_csv(pca_filepath, index=False)\n",
+    "print(f\"💾 PCA дані (2D) збережено: {pca_filepath}\")\n",
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"✅ КРОКИ 1-2 ЗАВЕРШЕНО УСПІШНО!\")\n",
+    "print(\"=\"*70)\n",
+    "print(\"\\n📊 Створено 7 графіків:\")\n",
+    "print(\"   1. iris_01_correlation_matrix.png - Кореляційна матриця\")\n",
+    "print(\"   2. iris_02_boxplots.png - Box plots\")\n",
+    "print(\"   3. iris_03_pairplot.png - Pair plot\")\n",
+    "print(\"   4. iris_04_scatter_pairs.png - Scatter plots всіх пар\")\n",
+    "print(\"   5. iris_05_pca_2d.png - PCA 2D візуалізація\")\n",
+    "print(\"   6. iris_06_pca_3d.png - PCA 3D візуалізація\")\n",
+    "print(\"   7. iris_07_histograms.png - Гістограми розподілу\")\n",
+    "\n",
+    "print(\"\\n💡 Наступний крок: Побудова базової моделі BIRCH\")\n",
+    "print(\"=\"*70)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.13.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
